[metadata]
name = offline-radio
author = Jamie Bliss
author_email = jamie@ivyleav.es
description = Tool to manage a music directory with quotas
long_description = file: README.md
long_description_content_type=text/markdown
project_urls =
    Tip Jar = https://ko-fi.com/astraluma
    Source Code = https://github.com/AstraLuma/offline-radio
license = GPL
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
include_package_data = False
packages = find:
python_requires = >=3.7

install_requires =
    feedparser
    requests
    toml
    xattr
    pywebview
    pause
    flask

setup_requires =
    wheel
    setuptools_scm

tests_require =
     pytest

[options.extras_require]
gtk =
    pywebview[gtk]
qt =
    pywebview[qt]

[options.packages.find]
exclude=testmod


[options.entry_points]

console_scripts =
    offline-radio = offline_radio.cli:main

[flake8]
select = C,E,F,W,B,B9
ignore = E221
max-complexity = 7
max-line-length = 999
exclude =
    .eggs,
    .git,
    .tox,
    __pycache__,
    build,
    dist,
    docs
